# Task-Manager

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
labels/: models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
project/: settings.py  urls.py
statuses/: admin.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_statuses_name_alter_statuses_pub_date.py
task_manager/: forms.py  tests.py  urls.py  views.py
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_tasks_delete_task.py  0003_tasks_labels.py  0004_alter_tasks_labels.py
templates/: index.html
templates/labels/: create_labels.html  delete_labels.html  labels_list.html  update_labels.html
templates/statuses/: create_status.html  delete_statuses.html  statuses_list.html  update_statuses.html
templates/task_manager/: base.html  create.html  delete.html  index.html  login.html  update.html  user_list.html
templates/tasks/: _task_filter.html  task_create.html  tasks_delete.html  tasks_list.html  update_tasks.html
